[package]
name = "iterr"
version = "0.2.0"
authors = ["Daniel Keep <daniel.keep@gmail.com>"]

description = "Combinators for dealing with iterators of `Result`s."
repository = "https://github.com/DanielKeep/iterr"
readme = "README.md"
license = "MIT/Apache-2.0"
keywords = ["iterator", "result"]
categories = ["rust-patterns"]
